--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "simplebar": "^6.2.5",
+    "simplebar-react": "^3.2.4",
     "styled-components": "^6.0.7",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
